# cpp-russia-competive-code

./: CMakeLists.txt  file1.cpp  file2.cpp  file3.cpp  file4.cpp  justfile  out2  out3  tests_log.txt  tests_log2
